...
                android:text="Pick a Food"
                android:textColor="@color/text_sub"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium" />

            <AutoCompleteTextView
                android:id="@+id/food_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Sült Csirkeszárny"
                android:inputType="text"
                android:paddingVertical="12dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/quantity_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="Enter the quantity"
                    android:inputType="numberDecimal"
...
