...
        app:tabMode="fixed" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/search_add_button"
        app:layout_constraintTop_toBottomOf="@id/toggle_tabs" />

    <Button
        android:id="@+id/search_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
